--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Webcore Retro Page</title>
+    <title>Welcome to the World Wide Web!</title>
     <style>
         body {
             background-image: url('https://www.techspot.com/images2/news/bigimage/2016/10/2016-10-28-image.gif');
