--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <p>I'm NyagOwOr, a french IT student, who'se passionate about everything relative to computers !</p>
         <div class="rotating-image"></div>
         <a href="#" class="button">Click Me!</a>
-        <p>Check out my <a href="https://example.com" target="_blank" style="color: yellow;">other cool stuff</a>.</p>
+        <p>Check out a cool <a href="https://lweb.cfa.harvard.edu/~gpetitpas/Links/Astroacro.html" target="_blank" style="color: yellow;">web page</a> I found!</p>
 
         <div class="presentation-text">
             <h2>About Me :</h2>
@@ -172,7 +172,7 @@
         <div class="gif-gallery">
             <img src="https://media.giphy.com/media/JIX9t2j0ZTN9S/giphy.gif" alt="Cat GIF">
             <img src="https://upload.wikimedia.org/wikipedia/en/0/04/Badgers_Badgers.gif" alt="Dancing Badgers GIF">
-            <img src="https://media0.giphy.com/media/U4TpDjFPVEjkI/200w.gif?cid=6c09b952ma4e07378k1tu71kfmqpu88w4jpkofs40z0v4y7b&ep=v1_gifs_search&rid=200w.gif&ct=g" alt="Smiley Face GIF">
+            <img src="https://media0.giphy.com/media/U4TpDjFPVEjkI/200w.gif?cid=6c09b952ma4e07378k1tu71kfmqpu88w4jpkofs40z0v4y7b&ep=v1_gifs_search&rid=200w.gif&ct=g" alt="Banana GIF">
         </div>
         
         <br>
