--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     <div class="container">
         <p>I'm NyagOwOr, a french IT student, who'se passionate about everything relative to computers !</p>
         <div class="rotating-image"></div>
-        <a href="#" class="button">Click Me!</a>
+        <a href="nyan-cat.html" class="button" target="_blank">Click Me!</a>
         <p>Check out a cool <a href="https://lweb.cfa.harvard.edu/~gpetitpas/Links/Astroacro.html" target="_blank" style="color: yellow;">web page</a> I found!</p>
 
         <div class="presentation-text">
