--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to the World Wide Web!</title>
+
+    <link rel="icon" href="favicon.png" type="image/png">
+    
     <style>
         body {
             background-image: url('https://www.techspot.com/images2/news/bigimage/2016/10/2016-10-28-image.gif');
