--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
         </div>
 
         <div class="gif-gallery">
+            <p>Funny memes :</p>
             <img src="https://media.giphy.com/media/JIX9t2j0ZTN9S/giphy.gif" alt="Cat GIF">
             <img src="https://upload.wikimedia.org/wikipedia/en/0/04/Badgers_Badgers.gif" alt="Dancing Badgers GIF">
             <img src="https://media0.giphy.com/media/U4TpDjFPVEjkI/200w.gif?cid=6c09b952ma4e07378k1tu71kfmqpu88w4jpkofs40z0v4y7b&ep=v1_gifs_search&rid=200w.gif&ct=g" alt="Banana GIF">
