--- a/index.html
+++ b/index.html
@@ -264,9 +264,9 @@
             </div>
 
             <div class="template-links">
-                <p><a href="https://geocities.com" target="_blank">Visit My Geocities</a></p>
+                <p><a href="https://neocities.org" target="_blank">Visit Neocities</a></p>
                 <p><a href="https://neopets.com" target="_blank">Play Neopets!</a></p>
-                <p><a href="https://myspace.com" target="_blank">Check Out My MySpace</a></p>
+                <p><a href="https://myspace.com" target="_blank">Check Out MySpace</a></p>
             </div>
 
             <div id="discord-username" class="footer" style="display: none;">
