--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 
             <div class="footer">
                 <p>© 1998 My Webpage. All rights reserved.</p>
-                <p>Made by Élian Bournisien.</p>
+                <p>Made by NyagOwOr.</p>
             </div>
         </div>
 
